--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
       <nav class="navbar">
         <h1 class="logo">Khalid Mehmood</h1>
-        
+
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#education">Education</a></li>
@@ -51,6 +51,12 @@
         I have recently started my internship at Code Cubics, where I am gaining
         real-world experience, collaborating with teams, and applying my
         frontend knowledge to practical projects.
+      </p>
+      <p>
+        I worked on implementing geofencing solutions that use GPS or RFID
+        technology to create virtual boundaries for real-world locations. The
+        system triggers automated alerts or actions when a device enters or
+        exits the defined geographic area.
       </p>
     </section>
 
