--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <!-- About Section -->
     <section id="about" class="section">
-      <img src="/images/image.jpg" alt="Khalid Mehmood" width="200" />
+      <img src="/images/photo.jpg" alt="Khalid Mehmood" width="200" />
       <h2>About Me</h2>
 
       <p>
